// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders a select with 3 options 1`] = `
<div>
  <select
    aria-label="dropdown"
    class="c-iOtDAX c-iOtDAX-ggkvuX-size-md"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders an disabled select 1`] = `
<div>
  <select
    aria-label="dropdown"
    class="c-iOtDAX c-iOtDAX-ggkvuX-size-md"
    disabled=""
  />
</div>
`;

exports[`Select component renders select with a default option 1`] = `
<div>
  <select
    aria-label="dropdown"
    class="c-iOtDAX c-iOtDAX-ggkvuX-size-md"
  >
    <option
      disabled=""
      hidden=""
      selected=""
      value=""
    >
      Please select:
    </option>
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders select with a disabled option 1`] = `
<div>
  <select
    aria-label="dropdown"
    class="c-iOtDAX c-iOtDAX-ggkvuX-size-md"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
    <option
      disabled=""
      value="value4"
    >
      Option 4
    </option>
  </select>
</div>
`;

exports[`Select component renders select with no options 1`] = `
<div>
  <select
    aria-label="dropdown"
    class="c-iOtDAX c-iOtDAX-ggkvuX-size-md"
  />
</div>
`;
